[gd_scene load_steps=6 format=3 uid="uid://biugpvosreqvm"]

[ext_resource type="Script" uid="uid://c20x1kgr38a2f" path="res://scripts/space_station.gd" id="1_3mvrh"]
[ext_resource type="Texture2D" uid="uid://bsr3lt0qk6moc" path="res://assets/nave tiro e cometa.png" id="2_vb2ps"]
[ext_resource type="Texture2D" uid="uid://crtvg1kdw5hr5" path="res://icon.svg" id="3_vb2ps"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mobw"]
size = Vector2(914, 656)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mvrh"]
size = Vector2(112, 174)

[node name="SpaceStation" type="RigidBody2D"]
script = ExtResource("1_3mvrh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.505, 1.505)
texture = ExtResource("2_vb2ps")
region_enabled = true
region_rect = Rect2(364.356, 216.747, 144.675, 155.23)

[node name="Label" type="Label" parent="."]
offset_left = -52.0
offset_top = 71.0
offset_right = 53.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 16
text = "Space Station"

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
shape = SubResource("RectangleShape2D_5mobw")

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2"]
shape = SubResource("RectangleShape2D_3mvrh")
debug_color = Color(0.877604, 0.240109, 0.613854, 0.42)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="Save Menu" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -60.5
offset_right = 65.5
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Save Menu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="Save Menu/MarginContainer"]
layout_mode = 2

[node name="Shop Button" type="Button" parent="Save Menu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Shop"
icon = ExtResource("3_vb2ps")
expand_icon = true

[node name="Continue Button" type="Button" parent="Save Menu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Continue"
icon_alignment = 1
expand_icon = true

[node name="Save and Exit Button" type="Button" parent="Save Menu/MarginContainer/GridContainer"]
layout_mode = 2
text = "Save and Exit
"
icon_alignment = 1
expand_icon = true

[connection signal="body_entered" from="Area1" to="." method="_on_area_1_body_entered"]
[connection signal="body_exited" from="Area1" to="." method="_on_area_1_body_exited"]
[connection signal="body_entered" from="Area2" to="." method="_on_area_2_body_entered"]
[connection signal="pressed" from="Save Menu/MarginContainer/GridContainer/Shop Button" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Save Menu/MarginContainer/GridContainer/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Save Menu/MarginContainer/GridContainer/Save and Exit Button" to="." method="_on_save_and_exit_button_pressed"]
